Tek3/DevOps/Orchestrator/poll.deployment.yaml
# poll.deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deployment
  labels:
    app: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      labels:
        app: poll
    spec:
      restartPolicy: Always
      containers:
      - name: poll
        image: epitechcontent/t-dop-600-poll:k8s
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
