Tek3/DevOps/Orchestrator/postgres.deployment.yaml
# postgres.deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 0
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      restartPolicy: Always
      containers:
      - name: postgres
        image: postgres:12
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgres/data
          name: vol
      volumes:
      - name: vol
        persistentVolumeClaim:
          claimName: volclaim
