Tek3/DevOps/Orchestrator/result.deployment.yaml
# result.deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  labels:
    app: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      restartPolicy: Always
      containers:
      - name: result
        image: epitechcontent/t-dop-600-result:k8s
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
