Tek3/DevOps/Orchestrator/traefik.deployment.yaml
# traefik.deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  namespace: kube-public
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      restartPolicy: Always
      containers:
      - name: traefik
        image: traefik:1.7
        ports:
        - name: http-proxy
          containerPort: 80
        - name: admin-dashboard
          containerPort: 8080
