Tek3/DevOps/Orchestrator/poll.service.yaml
# poll.service.yaml

apiVersion: v1
kind: Service
metadata:
  name: poll-service
spec:
  selector:
    app: poll
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
