Tek3/DevOps/Orchestrator/result.service.yaml
# result.service.yaml

apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  selector:
    app: result
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
