Tek3/DevOps/Orchestrator/result.ingress.yaml
# result.ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: result-ingress
  labels:
    app: result
spec:
  rules:
  - host: result.dop.io
    http:
      paths:
      - backend:
          serviceName: result
          servicePort: 80
